corrected element gaps

--- a/style.css
+++ b/style.css
@@ -41,9 +41,9 @@ body {
     grid-template-columns: 1fr 4fr 1fr;
 }
 
-span {
+/* span {
     font-size: 2rem;
-}
+} */
 
 /*-------------CONTAINER------------*/
 
@@ -78,8 +78,8 @@ header {
 
     header h1 {
         color: var(--dark-text-1);
-        /* position: fixed; */
-
+        /* position: fixed;
+        bottom: 0; */
     }
 
 
@@ -91,6 +91,8 @@ header {
 
         .bio .about-me {
             max-width: 15rem;
+            display: grid;
+            gap: 0.5rem;
         }
 
 /*-------------MAIN------------*/
@@ -98,10 +100,11 @@ header {
 main {
     background-color: var(--dark-background-2);
     padding: 2rem;
+    display: grid;
+    gap: 1rem;
 }
 
         main h2 {
-            margin-bottom: 1rem;
             margin-left: 1rem;
         }
 
@@ -116,20 +119,13 @@ main {
                 border-top: thin solid var(--bright-text-dim);
                 padding: 1rem;
                 box-shadow: 1px 1px 2px var(--bright-text-dim);
+                display: grid;
+                gap: 0.5rem;
             }
 
                 .card img {
                     width: 100%;
-                    margin-bottom: 0.5rem;
                 }
-
-                .card h3 {
-                    margin-bottom: 0.5rem;
-                }
-
-
-
-
 
 /*-------------FOOTER------------*/
 footer {
@@ -140,9 +136,11 @@ footer {
 }
 
     footer .contact-me {
-        display: flex;
+        /* display: flex;
         flex-direction: column;
-        justify-content: space-around;
+        justify-content: space-around; */
+        display: grid;
+        gap: 1rem;
     }
 
     footer .headshot-f {
